Add 2 JMockit tests